add SendCoinTx and SignedTx (#5)
* add SendCoinTx and SignedTx

* add CreateCoinTx

* add BuyCoinTx

* add SellCoinTx

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,3 +4,6 @@ Style/StringLiterals:
   EnforcedStyle: double_quotes
 Style/Documentation:
   Enabled: false
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
