update_minter_go_sdk and API v2 (#23)
* update_minter_go_sdk and API v2

* rubocop

--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-MAINNET_BASE_URL=https://gate-api.minter.network/api
-TESTNET_BASE_URL=https://minter-node-1.testnet.minter.network:8841
-NODE_URL=https://minter-node-1.testnet.minter.network:8841
+NODE_URL=https://node-api.testnet.minter.network
